[package]
name = "gdcli"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4"}
tokio = { version = "1", features = ["full"] }
itertools = "0.12.1"
derive_builder = "0.20.0"
clap = { version = "4.5.4", features = ["derive"] }
base64 = "0.22.0"
textwrap = "0.16"
